--- a/public/package.json
+++ b/public/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-react-spa",
+  "name": "theme-manager",
   "version": "1.0.0",
   "description": "Webpack for ant design.",
   "main": "index.js",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/afeiship/webpack-react-spa.git"
+    "url": "git+https://github.com/afeiship/theme-manager.git"
   },
   "keywords": [
     "webpack",
@@ -32,10 +32,11 @@
   "author": "afei",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/afeiship/webpack-react-spa/issues"
+    "url": "https://github.com/afeiship/theme-manager/issues"
   },
-  "homepage": "https://github.com/afeiship/webpack-react-spa#readme",
+  "homepage": "https://github.com/afeiship/theme-manager#readme",
   "dependencies": {
+    "antd": "^3.15.1",
     "array-from": "^2.1.1",
     "classnames": "^2.2.5",
     "http-rest-config": "github:afeiship/http-rest-config",
